# serde-plain

./: CHANGELOG  Cargo.toml  README.md
serde-plain/: Cargo.toml
serde-plain-derive/: Cargo.toml
serde-plain-derive/src/: lib.rs
serde-plain/src/: lib.rs  macros.rs
serde-plain/tests/: test_derive.rs
src/: de.rs  error.rs  lib.rs  macros.rs  ser.rs
tests/: test_de.rs  test_macros.rs  test_ser.rs
