[package]
name = "serde_plain_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", default-features = false, features = ["parsing", "proc-macro", "derive"] }
