[package]
name = "serde_plain"
version = "1.0.2"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
license = "MIT/Apache-2.0"
description = "A restricted plain text serializer for serde"
homepage = "https://docs.rs/serde_plain"
documentation = "https://docs.rs/serde_plain"
repository = "https://github.com/mitsuhiko/serde-plain"
keywords = ["serde", "serialization", "from_str", "display"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1.0.29"
serde_plain_derive = { path = "../serde-plain-derive", optional = true }

[dev-dependencies]
serde_derive = "1.0.29"
serde_plain = { path = "../serde-plain", features = ["derive"] }

[features]
derive = ["serde_plain_derive"]